--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "create_keys": "openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout nginx.key -out nginx.crt",
     "https": "export HTTPS=1; node server.js",
-    "http": "export HTTPS=0; node server.js"
+    "http": "export HTTPS=0; node server.js",
+    "dev_http": "export HTTPS=0; supervisor -w server.js,lib/ server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +22,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-run": "^0.3.0",
     "grunt-standard": "^2.0.0",
-    "mongojs": "^1.4.1"
+    "mongojs": "^1.4.1",
+    "socket.io": "^1.3.7"
   },
   "repository": {
     "type": "git",
