--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-run": "^0.3.0",
     "grunt-standard": "^2.0.0",
     "mongojs": "^1.4.1",
+    "rpi-gpio": "^0.7.0",
     "socket.io": "^1.3.7"
   },
   "repository": {
